Documentation edits made through Mintlify web editor

--- a/create-new-account.mdx
+++ b/create-new-account.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Create a new Account"
-description: "Description of your new file."
+description: "Floo Analytics is a robust website analytics solution designed for simplicity and actionable insights. Getting started is easy—sign up for an account, connect your site using our streamlined tracking script, and unlock powerful analytics with minimal effort."
 ---
 
-asfasgasgasgasgas
+## Enjoy Your 7-Day Free Trial
+
+New Floo Analytics users receive a **7-day free trial** with no upfront charges. During this trial period, gain full access to all features with zero limitations. Decide anytime within 7 days if Floo Analytics is right for your needs—cancel within the trial window and pay nothing, no questions asked.
