Documentation edits made through Mintlify web editor

--- a/create-new-account.mdx
+++ b/create-new-account.mdx
@@ -6,3 +6,33 @@ description: "Floo Analytics is a robust website analytics solution designed for
 ## Enjoy Your 7-Day Free Trial
 
 New Floo Analytics users receive a **7-day free trial** with no upfront charges. During this trial period, gain full access to all features with zero limitations. Decide anytime within 7 days if Floo Analytics is right for your needs—cancel within the trial window and pay nothing, no questions asked.
+
+## Flexible Subscription Options
+
+Select a monthly or annual plan that fits your business goals. Annual members benefit from exclusive discounts. Pricing is transparent, allowing you to choose based on expected traffic and data usage, with options to adjust your subscription as your requirements change. Getting started takes only minutes, and you can upgrade or downgrade your plan seamlessly at any time.
+
+## Quick Setup, No Hassle
+
+- Register instantly for your Floo Analytics account and follow a simple step-by-step guide.
+- Embed your unique tracking script on your website for immediate data capture.
+- Access smart dashboards and actionable reports from day one.
+
+Floo Analytics empowers teams to track, analyze, and optimize website activity with confidence and ease. Start your free trial and experience next-level analytics today.
+
+## Account Creation Steps
+
+- Click the “Get started for free” button on the website to initiate registration.
+- Select a subscription plan that matches your anticipated monthly traffic or pageviews.
+- Provide your email address and payment information—no charges are applied until your free trial ends.
+- Enter billing details on the following screen.
+- Create your first website profile to start using analytics and access powerful dashboard features.
+
+## Additional Account Features
+
+- Each plan allows the creation of up to 50 websites or dashboards under a single account, with the flexibility to add more as needed.
+- Easily share dashboards with teammates, clients, or the public via customizable sharing settings.
+- Unlimited automated email reports can be sent to any collaborator or stakeholder to keep teams informed.
+
+These steps and features ensure a seamless onboarding experience, supporting both individual users and collaborative teams on Floo Analytics.
+
+<Icon icon="diagram-next" color="#" />
