Documentation edits made through Mintlify web editor

--- a/how-free-trials-work.mdx
+++ b/how-free-trials-work.mdx
@@ -1,4 +1,17 @@
 ---
-description: "Description of your new file."
 title: "How do free trials work?"
 ---
+
+Signing up for a Floo Analytics account is fast and easy, and every new user receives a **7-day free trial** with unlimited feature access from the moment of registration.
+
+To maintain platform security and optimal performance for all customers, Floo Analytics requests a credit card during sign-up. There are absolutely **no usage restrictions** during your trial—track unlimited pageviews, generate email reports, and use every dashboard tool with no limits.
+
+Before your trial ends, Floo Analytics will send a helpful reminder email so you can decide whether to continue or easily cancel your account. If you choose not to subscribe, simply cancel anytime during the trial, and your card will not be charged.
+
+Once your account is active, begin adding all your sites, collect real-time analytics data, and explore every feature with full access—risk-free, with no commitments required.
+
+This updated content offers transparency, reduces friction, and demonstrates Floo Analytics’s commitment to a superior customer experience.
+
+## Transitioning from Trial to Paid Account
+
+If a Floo Analytics trial is not canceled within the 7 days, the account transitions seamlessly to a paid plan on the eighth day, and the first invoice is billed automatically. There are no additional steps required—if enjoying the service, simply continue using Floo Analytics without interruption.
