Documentation edits made through Mintlify web editor

--- a/Script-installation.mdx
+++ b/Script-installation.mdx
@@ -1,5 +1,10 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Script-installation"
+description: "Description of your new file."
 ---
 
+To begin collecting insights with Floo Analytics, add the tracking script to your website’s header—this can be done manually or through a supported plugin or integration. For WordPress sites, use the dedicated plugin; other platforms may leverage easy-to-configure integrations.
+
+Floo Analytics provides a live dashboard: visit your own site and confirm your visit displays in the “Active Visitors” section to ensure successful script setup.
+
+If data isn’t appearing or results seem inaccurate, check troubleshooting resources or integration guides for fast resolution and optimal performance.
