Documentation edits made through Mintlify web editor

--- a/Dashboard-explained.mdx
+++ b/Dashboard-explained.mdx
@@ -1,6 +1,5 @@
 ---
 title: "Dashboard explained"
-description: "Description of your new file."
 ---
 
 Floo Analytics delivers **privacy-first website analytics** that visualize key performance data in real time via dashboards and automated email reports. Every dashboard displays actionable metrics—including active visitors, total page views, average time spent, bounce rates, and event tracking—to help users quickly understand website engagement.
@@ -11,17 +10,19 @@ The image provides dashboard usage tips and customization options, including tim
 
 ## Additional Dashboard Features for Floo Analytics
 
-- **Time Zones**: Floo Analytics collects site data in UTC\+0 and then adjusts your dashboard view to match the local timezone for accurate tracking. The system resets unique visitor metrics at midnight UTC\+0 for consistent daily analytics.
-- **Changing the Graph**: Users can customize dashboard graphs by clicking any metric in the summary box—such as visitors, views, session time, bounce rate, or event completions—to show or hide individual data lines and focus on what’s important.
-- **Dark Mode**: Floo Analytics dashboards automatically adapt to your website’s visual theme, displaying in either light or dark mode. Users can adjust this preference at any time through their account settings, making the analytics experience more comfortable and accessible.
+**Time Zones**: Floo Analytics collects site data in UTC\+0 and then adjusts your dashboard view to match the local timezone for accurate tracking. The system resets unique visitor metrics at midnight UTC\+0 for consistent daily analytics.
+
+**Changing the Graph**: Users can customize dashboard graphs by clicking any metric in the summary box—such as visitors, views, session time, bounce rate, or event completions—to show or hide individual data lines and focus on what’s important.
+
+**Dark Mode**: Floo Analytics dashboards automatically adapt to your website’s visual theme, displaying in either light or dark mode. Users can adjust this preference at any time through their account settings, making the analytics experience more comfortable and accessible.
 
 ## Viewing Dashboard Details
 
-- Clicking the icon at the bottom left of any dashboard tile reveals additional insights for that metric. Each details view displays up to 50 data rows per page, with sections such as Pages offering advanced breakdowns—like bounce rate or average session time per page—for deeper analysis.
+Clicking the icon at the bottom left of any dashboard tile reveals additional insights for that metric. Each details view displays up to 50 data rows per page, with sections such as Pages offering advanced breakdowns—like bounce rate or average session time per page—for deeper analysis.
 
 ## Definition of a Visitor
 
-- A "visitor" is recognized as a distinct user who comes to your website—regardless of the number of pages viewed. Floo Analytics maintains privacy by resetting visitor identifiers every 24 hours, ensuring that data remains anonymized while keeping reporting accurate and actionable.
+A "visitor" is recognized as a distinct user who comes to your website—regardless of the number of pages viewed. Floo Analytics maintains privacy by resetting visitor identifiers every 24 hours, ensuring that data remains anonymized while keeping reporting accurate and actionable.
 
 ## What Are Views?
 
