Documentation edits made through Mintlify web editor

--- a/Dashboard-terminology.mdx
+++ b/Dashboard-terminology.mdx
@@ -1,3 +1,12 @@
 ---
 title: "Dashboard Terminology "
 ---
+
+- **Visitor**: A distinct person who has accessed the website, counted once regardless of the number of visits or pageviews.
+- **View**: The total number of times any page on the site is loaded or displayed.image.jpg
+- **Page Visitor**: A unique individual counted separately for each specific page, unlike a site-wide visitor metric.
+- **Entries**: The initial pages where users enter the site during their session, marking their point of arrival.
+- **Referrer**: Another website that links to your own; when a visitor arrives via this link, the source is recorded (unless referral data is hidden or absent).
+- **Ref**: A URL tag that signals where a visitor originated, enhancing tracking for campaigns and partnerships (e.g., ?ref=mysite).
+- **Events**: Custom interactions tracked beyond page views, such as button clicks, form submissions, or e-commerce actions.
+- **Referral**: When a user signs up via a unique referral link, the referrer receives credit for new registrations.
