Documentation edits made through Mintlify web editor

--- a/Dashboard-terminology.mdx
+++ b/Dashboard-terminology.mdx
@@ -2,11 +2,11 @@
 title: "Dashboard Terminology "
 ---
 
-- **Visitor**: A distinct person who has accessed the website, counted once regardless of the number of visits or pageviews.
-- **View**: The total number of times any page on the site is loaded or displayed.image.jpg
-- **Page Visitor**: A unique individual counted separately for each specific page, unlike a site-wide visitor metric.
-- **Entries**: The initial pages where users enter the site during their session, marking their point of arrival.
-- **Referrer**: Another website that links to your own; when a visitor arrives via this link, the source is recorded (unless referral data is hidden or absent).
-- **Ref**: A URL tag that signals where a visitor originated, enhancing tracking for campaigns and partnerships (e.g., ?ref=mysite).
-- **Events**: Custom interactions tracked beyond page views, such as button clicks, form submissions, or e-commerce actions.
-- **Referral**: When a user signs up via a unique referral link, the referrer receives credit for new registrations.
+- **Visitor**: A distinct individual who arrives at your website, counted once per day regardless of their browsing activity.
+- **View**: The number of times any page is loaded, representing total site engagement and activity.
+- **Page Visitor**: A unique person tracked for each page visited; each visit to a page from a specific user counts once as a page visitor, even if they return multiple times.
+- **Entry Page**: The specific web page where a user’s session starts—each visit has a single entry page marking their point of arrival.
+- **Referrer**: The external site or platform that directed a visitor to Floo Analytics, recorded when available; if missing, use custom tags for improved attribution.
+- **Ref Tag**: A URL parameter (for example, ?ref=partner-site) identifying the precise origin of website traffic for campaign tracking.
+- **Event**: Any custom action or interaction tracked beyond standard page views, like button clicks, form submissions, or product purchases.
+- **Referral Signup**: Occurs when users join Floo Analytics through your unique referral link, earning rewards and attributing growth
