Documentation edits made through Mintlify web editor

--- a/create-new-account.mdx
+++ b/create-new-account.mdx
@@ -33,6 +33,6 @@ Floo Analytics empowers teams to track, analyze, and optimize website activity w
 - Easily share dashboards with teammates, clients, or the public via customizable sharing settings.
 - Unlimited automated email reports can be sent to any collaborator or stakeholder to keep teams informed.
 
-These steps and features ensure a seamless onboarding experience, supporting both individual users and collaborative teams on Floo Analytics.
+These steps and features ensure a seamless onboarding experience, supporting both individual users and collaborative teams on Floo Analytics
 
 <Icon icon="diagram-next" color="#" />
