Documentation edits made through Mintlify web editor

--- a/Sample-Privacy-Policy.mdx
+++ b/Sample-Privacy-Policy.mdx
@@ -1,4 +1,19 @@
 ---
-description: "Description of your new file."
 title: "Sample Privacy Policy for Floo Analytics"
 ---
+
+When using an external analytics solution like Floo Analytics, it’s important to update your site’s privacy policy to inform visitors about how their data is handled. This not only ensures compliance but also helps reassure users about the security and privacy of their information.
+
+Floo Analytics prioritizes privacy by collecting minimal data and avoiding invasive tracking methods. As a result, website owners typically don’t need to add cookie banners or pop-ups for visitors. The platform’s privacy-first approach ensures compliance with internationally recognized privacy laws, making communication with visitors simple and transparent.
+
+## Floo Analytics Privacy Policy Sample
+
+Floo Analytics is designed with privacy as a core principle, ensuring that only minimal, non-invasive data is collected from website visitors. Because of these strict privacy measures and full compliance with global privacy regulations, website owners typically do not need to implement disruptive cookie notices or pop-ups. All analytics processing with Floo Analytics meets legal requirements and helps maintain a simple, trustworthy visitor experience. 
+
+## Privacy Policy Text for Floo Analytics
+
+Floo Analytics is implemented to ensure the collection of only the minimal personal information necessary when using this website. This analytics tool does not use cookies and aligns with GDPR, ePrivacy, PECR, COPPA, and CCPA requirements. Visitor IP addresses are briefly processed and are not used to identify individuals; all collected data is anonymized, and website operators cannot link analytics data to specific people.
+
+The data helps improve website traffic understanding in a privacy-centric manner, and no personal data is retained over time. The lawful basis for processing is legitimate interest, consistent with GDPR Article 6(1)(f).
+
+Including this or similar language in a privacy policy demonstrates a commitment to privacy, though it is not mandated by law.
