Documentation edits made through Mintlify web editor

--- a/Ad-and-email-campaigns-UTMs.mdx
+++ b/Ad-and-email-campaigns-UTMs.mdx
@@ -2,3 +2,7 @@
 description: "Description of your new file."
 title: "Ad and email campaigns (UTMs)"
 ---
+
+Floo Analytics enables precise measurement of marketing and outreach efforts by supporting **UTM parameters**—short tags added to your campaign URLs to track visitor origin and campaign performance. These parameters allow users to distinguish traffic from sources like emails, social media ads, and newsletter links, appearing directly in the dashboard for easy analysis.
+
+Since some channels hide or strip referral data (often called **"dark social"**), using UTMs ensures that visits from every campaign are accurately attributed. Floo Analytics offers compatible **UTM builder **tools for seamless campaign setup and supports all standard UTM fields.
