--- a/Dashboard-explained.mdx
+++ b/Dashboard-explained.mdx
@@ -8,6 +8,8 @@ Interactive charts and breakdowns make it easy to compare traffic sources, conte
 \
 The image provides dashboard usage tips and customization options, including time zone management, interactive chart controls, and display preferences.
 
+![Nandini Floo Dashboard Pn](/images/nandini-floo-dashboard.png)
+
 ## Additional Dashboard Features for Floo Analytics
 
 **Time Zones**: Floo Analytics collects site data in UTC\+0 and then adjusts your dashboard view to match the local timezone for accurate tracking. The system resets unique visitor metrics at midnight UTC\+0 for consistent daily analytics.
@@ -38,7 +40,7 @@ Bounce rate in Floo Analytics measures the percentage of sessions where users le
 
 ## Event Metrics
 
-Events encompass interactions beyond simple page views—like button clicks, form completions, and e-commerce activities. Floo Analytics calculates event conversion by comparing the number of event triggers to total page views. Additionally, unique event completions capture the count of distinct visitors who achieve a specific goal, ensuring metrics reflect genuine user engagement.
+Events encompass interactions beyond simple page views—like button clicks, form completions, and e-commerce activities. Floo Analytics calculates event conversion by comparing the number of event triggers to the total number of page views. Additionally, unique event completions capture the count of distinct visitors who achieve a specific goal, ensuring metrics reflect genuine user engagement.
 
 ## Interpreting Realtime Metrics
 
@@ -54,6 +56,6 @@ These metrics help users distinguish between engaged, live site visitors and und
 
 ## What is a “ref” Parameter?
 
-A “ref” parameter in a web address signals the origin or referring source of a website visitor, helping analytics platforms attribute traffic to the right campaigns or external links. For instance, URLs like landingpage.com/?ref=mysite use this tag to indicate that a visit originated from a specific promotion, social network, email, or external website.image.jpg
+A “ref” parameter in a web address indicates the origin or referring source of a website visitor, enabling analytics platforms to attribute traffic to the correct campaigns or external links. For instance, URLs like landingpage.com/?ref=mysite use this tag to indicate that a visit originated from a specific promotion, social network, email, or external website.image.jpg
 
 By tracking ref parameters, Floo Analytics enables accurate measurement of which channels, campaigns, or referring sites are driving visitor traffic and conversions.
