--- a/Using-keyboard-shortcuts.mdx
+++ b/Using-keyboard-shortcuts.mdx
@@ -1,4 +1,28 @@
 ---
-title: "Using Keyboard Shortcuts"
-description: "Description of your new file."
+title: "Using Keyboard Shortcuts "
 ---
+
+Floo Analytics includes powerful keyboard shortcuts for quick dashboard navigation, helping users move between views and actions seamlessly without a mouse. To see the complete list of shortcuts, simply open the **“Options”** menu at the top right of any dashboard and select “**Show hotkeys”.**
+
+This streamlined approach makes it easy for both individual users and teams to manage analytics with speed and efficiency.\
+\
+Access all available shortcuts by clicking **"Options"** in the top-right corner and selecting **"Show hotkeys"**
+
+| **Action**                      | **Key** |
+| :------------------------------ | :-----: |
+| Date range: today               | A       |
+| Date range: yesterday           | S       |
+| Date range: last 7 days         | D       |
+| Date range: last 30 days        | F       |
+| Date range: this month          | G       |
+| Date range: last month          | H       |
+| Date range: this year           | J       |
+| Date range: all time            | K       |
+| Show date picker                | L       |
+| Previous period (if applicable) | ←       |
+| Next period (if applicable)     | →       |
+| Change between first 9 sites    | 1-9     |
+| View all sites page             | 0       |
+| Toggle percentages              | P       |
+| Toggle currents                 | C       |
+| Clear all filters               | ESC     |
