Documentation edits made through Mintlify web editor

--- a/Using-keyboard-shortcuts.mdx
+++ b/Using-keyboard-shortcuts.mdx
@@ -6,23 +6,25 @@ Floo Analytics includes powerful keyboard shortcuts for quick dashboard navigati
 
 This streamlined approach makes it easy for both individual users and teams to manage analytics with speed and efficiency.\
 \
-Access all available shortcuts by clicking **"Options"** in the top-right corner and selecting **"Show hotkeys"**
+Access all available shortcuts by clicking **"Options"** in the top-right corner and selecting **"Show hotkeys"**\
+\
+Here are our current shortcuts, and the key you can press to use them:
 
-| **Action**                      | **Key** |
-| :------------------------------ | :-----: |
-| Date range: today               | A       |
-| Date range: yesterday           | S       |
-| Date range: last 7 days         | D       |
-| Date range: last 30 days        | F       |
-| Date range: this month          | G       |
-| Date range: last month          | H       |
-| Date range: this year           | J       |
-| Date range: all time            | K       |
-| Show date picker                | L       |
-| Previous period (if applicable) | ←       |
-| Next period (if applicable)     | →       |
-| Change between first 9 sites    | 1-9     |
-| View all sites page             | 0       |
-| Toggle percentages              | P       |
-| Toggle currents                 | C       |
-| Clear all filters               | ESC     |
+| **Action**                       | **Key** |
+| :------------------------------- | :-----: |
+| Date range: today                | A       |
+| Date range: yesterday            | S       |
+| Date range: last 7 days          | D       |
+| Date range: last 30 days         | F       |
+| Date range: this month           | G       |
+| Date range: last month           | H       |
+| Date range: this year            | J       |
+| Date range: all time             | K       |
+| Show date picker                 | L       |
+| Previous period (if applicable)  | ←       |
+| Next period (if applicable)      | →       |
+| Change between the first 9 sites | 1-9     |
+| View all sites page              | 0       |
+| Toggle percentages               | P       |
+| Toggle currents                  | C       |
+| Clear all filters                | ESC     |
