Documentation edits made through Mintlify web editor

--- a/your-account/Add-or-delete-a-site.mdx
+++ b/your-account/Add-or-delete-a-site.mdx
@@ -1,4 +1,57 @@
 ---
 title: "Add or delete a site"
-description: "Description of your new file."
 ---
+
+Floo Analytics accounts allow users to **add or delete a site** at any time, supporting up to 50 sites per account at no extra cost. This lets you track multiple websites simultaneously and easily **share those dashboards** or **email reports** with any client, customer, or collaborator who needs access.
+
+When **sharing a site or sites**, each shared site remains separate from your other managed sites. For example, if you’ve created a site called **LunaStonks**, you can share its dashboard with a client, but **they cannot see your other sites** unless you explicitly share those as well. This privacy also applies when sending **email reports**—each report is site-specific, so recipients only receive details relevant to the selected site.\
+\
+You can share dashboards or reports for multiple sites with a single person, and future updates will introduce **user accounts** for more advanced sharing features.
+
+## Instructions for Creating a Site
+
+To set up a new site or add another workspace:
+
+1. Navigate to the **Preferences** section.
+2. Select **Websites**.
+3. Choose **Create new** found at the page header.
+4. Enter a title for the site—this can be any label for internal tracking.
+5. Copy the integration code and insert it where you need it.
+
+Once a site is created, a unique site identifier is generated for use with integration tools. The new site appears in the list under **Websites** for easy dashboard access and can be shared, used in reports, or included in site-wide analytics features.
+
+## Steps to Remove a Site
+
+If a workspace or site is no longer required, it may be erased—note that doing so will immediately discard all related content and analytics, and recovery won't be possible.
+
+To remove a site:
+
+1. Access **Preferences**.
+2. Open **Websites**.
+3. Choose the desired site slated for removal.
+4. Press **Settings**.
+5. Select **Remove website**.
+6. Enter the site’s title to confirm deletion.
+7. The final **Remove website** prompt will become available—approve it.
+
+Once confirmed, the site and its data are deleted, along with any reporting or dashboard access linked to it.
+
+## Instructions for Wiping Site Data
+
+If the goal is to retain a site’s unique ID and event records but erase all gathered analytics or pageview data, perform a wipe.
+
+To erase site data:
+
+1. Go to **Preferences**.
+2. Select **Websites**.
+3. Find and choose the site to cleanse.
+4. Open **Settings**.
+5. Press **Clear data**.
+6. Enter the site name to confirm.
+7. The **Clear data** option will activate—select it to finalize.
+
+After confirming, the site’s history and recorded data are removed, but system identifiers and event links are kept for continued organization.
+
+## Information About Site Limits
+
+Accounts can support a limitless number of sites; however, there is a modest additional cost for maintaining more than fifty sites. For complete details, refer to the FAQs or contact the platform’s support team for guidance.
