Documentation edits made through Mintlify web editor

--- a/your-account/Two-Factory-Authentication.mdx
+++ b/your-account/Two-Factory-Authentication.mdx
@@ -1,3 +1,14 @@
 ---
-title: "Two-factor authentication"
+title: "Two-factor -Authentication"
 ---
+
+Enabling two-factor authentication is a quick way to add an extra security layer to your account. Use a password manager to safeguard your backup code—SMS isn’t supported due to vulnerabilities.
+
+To turn on 2FA:
+
+1. Log in and head to **Preferences**.
+2. Select **Profile**, then locate the **Two-Factor Auth** section and choose **Enable**.
+3. Scan the displayed QR code with your authenticator app, enter the six-digit code generated, then activate 2FA.
+4. Store your backup code securely. In case your authenticator app is lost or deleted, this code is the sole method to regain access—add it to your password manager or keep it somewhere safe. Use the backup code to log in when needed
+
+Setup is complete\! With two-factor authentication active, every login will prompt for your one-time six-digit verification code after entering your email and password, resulting in a more secure sign-in experience
