--- a/your-account/Upgrading-or-downgrading.mdx
+++ b/your-account/Upgrading-or-downgrading.mdx
@@ -1,3 +1,7 @@
 ---
 title: "Upgrading or downgrading"
 ---
+
+Plans can be adjusted at any time as data traffic changes. Access **Preferences \> Profile \> Billing** to choose a package in line with analytics needs. Feel free to upgrade whenever it suits, and for downgrades, reach out to support for help.
+
+Plans are designed to correspond to typical traffic volume; for example, a high-traffic site must use a plan with sufficient monthly views. When going over plan limits, review the platform’s plan limit policies—service will continue seamlessly until a change is made.
