Documentation edits made through Mintlify web editor

--- a/your-account/Exceeding-your-plan-limits.mdx
+++ b/your-account/Exceeding-your-plan-limits.mdx
@@ -1,3 +1,21 @@
 ---
 title: "Exceeding your plan limits"
 ---
+
+Analytics data will only stop being collected if invoices remain unpaid for a lengthy period and all correspondence is ignored. Otherwise, overages or late payments for brief durations won’t interrupt service.
+
+Automatic upgrades aren’t applied—users are notified and given control. Email notifications are sent when:
+
+- Usage surpasses plan limits by more than 30% during the first month.
+- Usage remains below a threshold (e.g., 100,000) and then exceeds it by 30% for two consecutive months.
+
+If usage is significantly over the allotted quota, users are contacted and advised to consider upgrading to match their activity. \
+\
+\
+When an account exceeds its monthly plan:
+
+- **Day 1:** An email is sent with a friendly upgrade prompt and link.
+- **Day 4:** A follow-up reminder states the upgrade must occur within three days, or the account will be locked.
+- **Day 7:** The account is locked, but analytics data continues to be processed; unlocking requires an upgrade.
+
+Analytics tracking is not interrupted if the plan limit is surpassed or an upgrade is delayed—access is paused but data continues accumulating until resolved. This approach aims to balance transparency and service continuity, allowing analytics to run even during unexpected situations.
