Documentation edits made through Mintlify web editor

--- a/your-account/Affiliate-Program-Overview.mdx
+++ b/your-account/Affiliate-Program-Overview.mdx
@@ -1,4 +1,21 @@
 ---
 title: "Affiliate Program Overview"
-description: "Description of your new file."
 ---
+
+Visit the affiliate dashboard by selecting **Preferences \> Profile** and accessing the **Referrals** area.
+
+User privacy is prioritized; referral details—such as contact information—are never disclosed. The program offers a **25% recurring commission** for each referral, awarded every month that the referred customer stays active.
+
+To get started, add a PayPal email to your profile and copy the affiliate link from the Referrals section for sharing. That’s all it takes to participate
+
+![Stats Pn](/images/stats.png)
+
+## Affiliate Stats Guide
+
+- **Clicks:** Total number of times your referral link has been tapped, whether on websites, social channels, or newsletters.
+- **Referrals:** Count of people signing up via your link. Each active referral yields a recurring 25% commission.
+- **Pending:** Earnings awaiting clearance after the 30-day holding period. Trial signups aren’t included until payment is received.
+- **Next payout:** The sum scheduled for payment on the next monthly cycle; commissions clear after 30 days and are disbursed on the first of the month or the next business day.
+- **Paid:** The accumulated amount sent to you so far.
+
+A valid platform account is required to maintain payout eligibility. The only restriction is that paid search ads must not use brand-specific keywords for promotion.
