Documentation edits made through Mintlify web editor

--- a/Script-settings/Add-the-embed-script.mdx
+++ b/Script-settings/Add-the-embed-script.mdx
@@ -1,3 +1,16 @@
 ---
 title: "Add the embed script"
 ---
+
+To enable Floo Analytics on a website, simply add a script snippet to the header area, inserting your assigned site ID in place of the placeholder:
+
+\<script src="https://cdn.flooanalytics.com/script.js" data-site="YOUR_SITE_ID"\>\</script\>
+
+## How to Generate or Locate Your Tracking Code
+
+- Sign in to Floo Analytics.
+- Navigate to **Preferences \> Websites.**
+- For a new site, enter your site name under **Add Website**, assign it a label, and save it. Copy the provided embed code and paste it into your site’s `<head>` section.
+- For an existing property, select its name, find the embed code under the **Integration** tab, and add it to your site’s header.
+
+After installation, confirm the script is working properly using the built-in verification tool in your Floo Analytics dashboard.
