Documentation edits made through Mintlify web editor

--- a/Script-settings/Add-the-embed-script.mdx
+++ b/Script-settings/Add-the-embed-script.mdx
@@ -14,3 +14,11 @@ To enable Floo Analytics on a website, simply add a script snippet to the header
 - For an existing property, select its name, find the embed code under the **Integration** tab, and add it to your site’s header.
 
 After installation, confirm the script is working properly using the built-in verification tool in your Floo Analytics dashboard.
+
+## Site Protection Settings
+
+Explore firewall options to manage access by blocking specific pages, IP addresses, regions, or entire domains for enhanced security and control.
+
+## Advanced Analytics Integration
+
+Learn about sophisticated script adjustments, such as ignoring canonical tags, respecting Do Not Track signals, and supporting single-page applications. For WordPress and other platforms, refer to integration instructions—if your site’s system isn’t covered, manually place the analytics code in the header or template.
