Documentation edits made through Mintlify web editor

--- a/Script-settings/Add-the-embed-script.mdx
+++ b/Script-settings/Add-the-embed-script.mdx
@@ -4,7 +4,7 @@ title: "Add the embed script"
 
 To enable Floo Analytics on a website, simply add a script snippet to the header area, inserting your assigned site ID in place of the placeholder:
 
-\<script src="https://cdn.flooanalytics.com/script.js" data-site="YOUR_SITE_ID"\>\</script\>
+\<script src="https://cdn.flooanalytics.com/index.js" data-site="YOUR_SITE_ID"\>\</script\>
 
 ## How to Generate or Locate Your Tracking Code
 
