Documentation edits made through Mintlify web editor

--- a/Features/Filtering-and-searching.mdx
+++ b/Features/Filtering-and-searching.mdx
@@ -4,7 +4,7 @@ title: "Guide to Filtering and Searching"
 
 Floo Analytics allows users to narrow analytics results by applying filters on dashboard rows or using the search tool. For example, choosing a content path like `/blog` highlights only results for that section, placing “Path = /blog” at the top of your dashboard.
 
-Filters can be inverted—switch from “is” to “is not” to display data that excludes your selected value. Filtering `/blog` with “is not” reveals site visits excluding that path.
+Filters can be inverted—switch from “is” to “is not” to display data that excludes your selected value. Filtering `/blog` With “is not” reveals site visits excluding that path.
 
 This feature is powerful for breaking down metrics:
 
@@ -103,7 +103,7 @@ text
 /^(admin|login)/ 
 ```
 
-This ensures all visits except those to admin or login sections are counted.
+This ensures all visits except those to the admin or login sections are counted.
 
 ## Applying Regex Filters
 
